--- a/public/chat.html
+++ b/public/chat.html
@@ -17,7 +17,7 @@
 <div class="todo">    
     <div class="nav">
         <div class="titulo_nav"><h1 id="antara">Antara</h1><i class='bx bxs-message-rounded-dots'></i></div>
-        <div class="parte_izq_nav">
+        <div class="parte_der_nav">
         <div class="usuarios_nav"><i class='bx bxs-group'></i><h6>3</h6></div>
 <!--         <i class='bx bx-cog'></i> -->
         </div>
@@ -25,27 +25,47 @@
 <div class="divisiones">
     <div class="user">
         <div class="user_up">
-            <div class="user_pfp"><img class="user_pfp_img" src="./img/kitty.PNG" alt=""><span class="status"></span></div>
+            <div class="contenedor_img"><img class="user_pfp" src="./img/kitty.PNG" alt=""><span class="status"></span></div>
             <h5>username</h5>
         </div>
 
-        <div class="chats">
-        <h6>Chats</h6>
-        <h8>Lorem</h8>
-        <h8>Lorem</h8>
-        <h8>Lorem</h8>
+        <div class="canales">
+        <span class="desplegable"><i class='bx bxs-chevron-down'></i><h6>Canales</h6></span>
+        <span class="canal"><i class='bx bx-hash'></i><h8>general</h8></span>
+        <span class="canal"><i class='bx bx-hash'></i><h8>Lorem</h8></span>
+        <span class="desplegable"><i class='bx bxs-chevron-down'></i><h6>Chats</h6></span>
+        <span class="chat_privado"><h8>Lorem</h8></span>
+        <span class="chat_privado"><h8>Klaha</h8></span>
+        <span class="chat_privado"><h8>Mana</h8></span>
         </div>
     </div>
 
     <div class="chat-area">
+            <div class="canal_name"><i class='bx bx-hash'></i><h3>general</h3></div>
         <div class="chat_estructura">
-            <div class="mensaje"><h6>Klaha:</h6><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quo! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum rem sit doloribus Lorem ipsum dolor sit amet.</p></div>
-            <div class="mensaje"><h6>Mana:</h6><p>Lorem ipsum dolor.</p></div>
+            <div class="chat_mensajes">
+                <div class="mensaje"><h6>Klaha:</h6><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae ipsum officia. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, quibusdam!</p></div>
+                <div class="mensaje"><h6>Mana:</h6><p>Lorem ipsum dolor.</p></div>
+                <div class="mensaje"><h6>Klaha:</h6><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae ipsum officia. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, quibusdam!</p></div>
+                <div class="mensaje"><h6>Mana:</h6><p>Lorem ipsum dolor.</p></div>
+                <div class="mensaje"><h6>Klaha:</h6><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae ipsum officia. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, quibusdam!</p></div>
+                <div class="mensaje"><h6>Mana:</h6><p>Lorem ipsum dolor.</p></div>
+                <div class="mensaje"><h6>Klaha:</h6><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores repudiandae ipsum officia. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, quibusdam!</p></div>
+                <div class="mensaje"><h6>Mana:</h6><p>Lorem ipsum dolor.</p></div>
+            </div>
         </div>
-        <div class="relleno"></div>
+
         <div class="chat-enviar-mensaje">
-            <h6>username</h6><textarea id="mensaje" name="" id="" cols="120" rows="2" placeholder="Enviar un mensaje..."></textarea>
-            <i class='bx bx-wink-smile'></i>
+            <span class="status_2"></span><h6>username</h6>
+            <form>
+                <textarea name="mensaje-input"
+                class="mensaje-input" cols="120" rows="2" placeholder="Enviar un mensaje..."></textarea>
+                <div class="mensaje-input" placeholder="Enviar un mensaje..." contenteditable="true" role="textbox"></div>
+                <span class="emojis"><i class='bx bx-wink-smile'></i></span>
+                <button class="mensaje-boton" type="submit">
+                <i class='bx bx-send'></i>
+                </button>
+            </form>
         </div>
     </div>
 
@@ -58,7 +78,6 @@
         </div>
     </div>
 </div>
-</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
+<script src="./js/mensaje.js"></script>
 </body>
