--- a/public/chat.html
+++ b/public/chat.html
@@ -34,9 +34,9 @@
         <span class="canal"><i class='bx bx-hash'></i><h8>general</h8></span>
         <span class="canal"><i class='bx bx-hash'></i><h8>Lorem</h8></span>
         <span class="desplegable"><i class='bx bxs-chevron-down'></i><h6>Chats</h6></span>
-        <span class="chat_privado"><h8>Lorem</h8></span>
-        <span class="chat_privado"><h8>Klaha</h8></span>
-        <span class="chat_privado"><h8>Mana</h8></span>
+        <span class="chat_privado"><span class=" "></span><h8>Lorem</h8></span>
+        <span class="chat_privado"><span class="status_canal"></span><h8>Klaha</h8></span>
+        <span class="chat_privado"><span class="status_canal"></span><h8>Mana</h8></span>
         </div>
     </div>
 
@@ -58,9 +58,7 @@
         <div class="chat-enviar-mensaje">
             <span class="status_2"></span><h6>username</h6>
             <form>
-                <textarea name="mensaje-input"
-                class="mensaje-input" cols="120" rows="2" placeholder="Enviar un mensaje..."></textarea>
-                <div class="mensaje-input" placeholder="Enviar un mensaje..." contenteditable="true" role="textbox"></div>
+                <div class="mensaje-input" name="mensaje-input" placeholder="Enviar un mensaje..." contenteditable="true" role="textbox">sehun</div>
                 <span class="emojis"><i class='bx bx-wink-smile'></i></span>
                 <button class="mensaje-boton" type="submit">
                 <i class='bx bx-send'></i>
