--- a/public/registro.html
+++ b/public/registro.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
+<div class="todo-registro">
     <div class="container">
         <div class="header">
             <h2>Crear cuenta</h2>
@@ -22,7 +23,7 @@
             </div>
             <div class="form-control">
                 <label for="email">Email</label>
-                <input type="email" placeholder="juanito@email.com" id="email" />
+                <input type="email" placeholder="antara@email.com" id="email" />
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error de mensaje</small>
@@ -34,17 +35,24 @@
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error </small>
             </div>
-            <div class="form-control">
-                <label for="password2">Repetir contraseña</label>
-                <input type="password" placeholder="Contraseña" id="password2"/>
-                <i class="fas fa-check-circle"></i>
-                <i class="fas fa-exclamation-circle"></i>
-                <small>Error</small>
-            </div>
-            <button>Enviar</button>
-            <button>Cerrar Sesion</button>
            
+             <button>Enviar</button> 
+             <p>O tambien por: </p>
+             <div class="sociales">
+              <div class="sociales-materia">
+                 <img src="img/google.svg" alt="">
+                  <span>Google</span>
+              </div>
+              <div class="sociales-materia">
+                  <img src="img/face.svg" alt="">
+                  <span>Facebook</span>
+              </div>
         </form>
+    
     </div>
+</div>
 </body>
 </html>
+
+
+
