cambio de fondo

--- a/public/login.html
+++ b/public/login.html
@@ -14,15 +14,15 @@
         <img class="image-container" src="img/violeta.jpg" alt="">
 
           <div class="login-info-container">
-            <h1 class="title">Inicia sesión:</h1>
+            <h1 class="title">Iniciar sesión:</h1>
             <form class="inputs-container">
                 <input class="input" type="text" placeholder="Usuario">
                 <input class="input" type="text" placeholder="Contraseña">
-                <p><span class="span"> Olvidaste tu Contraseña</span></p>
+                <p><span class="span"> ¿Olvidaste tu Contraseña?</span></p>
                 <button class="btn">login</button>
-                <p>¿Todavia no tenes una cuenta? <span class="span">Hace click aca</span></p>
+                <p>¿Todavía no tienes una cuenta? <span class="span">Hace click acá</span></p>
             </form>
-            <p>O tambien por: </p>
+            <p>O también por: </p>
                <div class="social-login">
                 <div class="social-login-element">
                    <img src="img/google.svg" alt="">
